--- a/estilo.css
+++ b/estilo.css
@@ -1,14 +1,1 @@
-/* Especificidad: 001*/
-body {
-    font-family: Tahoma, sans-serif;
-    color: #818181;
-   background-color:#fff;
-    }
-   /* Especificidad: 001*/
-   h1 {
-   color: #fff;
-   background-color:#FF5733;
-   padding: 2em;
-    text-transform: uppercase;
-    text-align: center;
-   }
+ /* Javier Sanabria Miranda UO293758 */
