Mejora de Contraste

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -4,7 +4,7 @@
  body { 
     font-family: Georgia, Times, "Times New Roman", serif;
     background-color: #EFFAFD;
-    color: #4A8BDF;
+    color: #0000ff;
 } 
 
 /* Especificidad = 001 */
