Reajustes de Contraste

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -135,6 +135,7 @@ caption {
     font-size: large;
     color: #A0006D;
     font-weight: bold;
+    background-color: #EFFAFD;
 }
 
 /* ----- Multimedia ----- */
