--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -105,7 +105,7 @@ dt {
 /* ----- Estilo para las Tablas ----- */
 
 table {
-    width: 70vw;
+    width: 50vw;
 }
 
 /* Especificidad 001 */
@@ -122,6 +122,7 @@ th {
     color: #CAEFF7;
     border-style: solid;
     border-color: #0000ff;
+    width: 30rem;
 }
 
 /* Especificidad 001 */
