--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -1,8 +1,8 @@
  /* Javier Sanabria Miranda UO293758 */
 
  body h2 {
-    background-color: #0000ff;
-    color: #EFFAFD;
+    background-color: #1b365d;
+    color: #f2c75c;
  }
 
  /* Especificidad 012 */
