--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -1,5 +1,6 @@
  /* Javier Sanabria Miranda UO293758 */
 
+ /* Especificidad 002 */
  body h2 {
     background-color: #1b365d;
     color: #f2c75c;
@@ -35,7 +36,8 @@
     box-shadow: 1% 1% 1% rgba(0, 0, 0, .3);
  }
 
- body>section:first-of-type>article[data-state=flip] {
+ body>section:first-of-type>article[data-state=flip],
+ body>section:first-of-type>article[data-state=revealed] {
     transform: rotateY(180deg);
  }
 
@@ -47,7 +49,7 @@
     height: 100%;
     position: absolute;
     border-radius: 5%;
-    background: #1C7CCC;
+    background: #20406d;
     backface-visibility: hidden;
  }
 
@@ -57,6 +59,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    color: #f2c75c;
  }
 
  /* Especificidad 014 */
