--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -36,6 +36,7 @@
     box-shadow: 1% 1% 1% rgba(0, 0, 0, .3);
  }
 
+  /* Especificidad 023 */
  body>section:first-of-type>article[data-state=flip],
  body>section:first-of-type>article[data-state=revealed] {
     transform: rotateY(180deg);
