Cambios CSS para Advertencias

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -124,7 +124,7 @@ th {
     color: #f2c75c;
     border-style: solid;
     width: 30rem;
-    border-color: #1b365d;
+    border-color: #183052;
 }
 
 /* Especificidad 001 */
