Fix + Memoria Adaptable

--- a/estilo/semaforo_grid.css
+++ b/estilo/semaforo_grid.css
@@ -94,7 +94,7 @@ main.load>div:last-of-type {
     to {background-color: #000A;}
 }
 
-main.load>div {
+main.load.unload>div {
     animation-name: turnOff;
     animation-duration: 0.1s;
     animation-fill-mode: forwards;
