--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -36,7 +36,7 @@
     box-shadow: 0.5em 0.5em 0.5em rgba(0, 0, 0, .3);
  }
 
-  /* Especificidad 023 */
+ /* Especificidad 023 */
  body>section:first-of-type>article[data-state=flip],
  body>section:first-of-type>article[data-state=revealed] {
     transform: rotateY(180deg);
@@ -68,4 +68,33 @@
  /* Especificidad 014 */
  body>section:first-of-type>article>img {
     transform: rotateY(180deg);
+ }
+
+ @media only screen and (max-width: 900px) {
+
+    /* Especificidad 012 */
+    body>section:first-of-type {
+       margin: 0%;
+    }
+
+    /* Especificidad 014 */
+    /* No es necesario establecer un color de primer plano pues ya lo hereda de body*/
+    body>section:first-of-type>article>h3 {
+       font-size: medium;
+    }
+
+    /* Especificidad 013 */
+    /* Tarjetas */
+    body>section:first-of-type>article {
+       height: 10em;
+    }
+ }
+
+ @media only screen and (max-width: 400px) {
+
+    /* Especificidad 014 */
+    /* No es necesario establecer un color de primer plano pues ya lo hereda de body*/
+    body>section:first-of-type>article>h3 {
+       font-size: x-small;
+    }
  }
