--- a/estilo/agenda_grid.css
+++ b/estilo/agenda_grid.css
@@ -5,6 +5,14 @@ main > section {
     width: 100%;
 }
 
+/* Especificidad 003 */
+main > section > h2 {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: center;
+    text-decoration-line: underline;
+}
+
 @media only screen and (max-width: 1300px) {
 
     /* Especificidad 002 */
@@ -38,32 +46,15 @@ section>article {
     padding: 4%;
     border-radius: 5%;
     background-color: #1b365d;
+    color: white;
 }
-/*
-section>article {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-    margin: 3%;
-    padding: 4%;
-    border-style: solid;
-    border-radius: 5%;
-    border-width: 0.3em;
-    border-color: #1b365d;
-    background-color: #F5F5F5;
-} 
-    */
 
 /* Especificidad 003 */
+/* No hace falta especificar color de fondo pues lo hereda de article */
 section > article > h3 {
     color: #f2c75c;
     font-weight: bold;
     text-decoration-line: underline;
-}
-
-/* Especificidad 003 */
-section > article > p, section > article > h4 {
-    color: white;
 }
 
 /* Especificidad 002 */
