Cambios en Diseño
Se ha cambiado el diseño de las noticias, meteorología y fechas de carreras haciendo que ahora el texto siempre esté justificado al centro, aunque ocupe más de una línea.
A su vez se ha quitado el h2 "Inicio" del index.html

--- a/estilo/article_elements.css
+++ b/estilo/article_elements.css
@@ -23,9 +23,9 @@ article {
     border-radius: 5%;
     justify-items: center;
     align-items: center;
+    text-align: center;
     background-color: #1b365d;
     color: #f2c75c;
-
 }
 
 /* Especificidad 012 y 002 */
