--- a/estilo/agenda_grid.css
+++ b/estilo/agenda_grid.css
@@ -45,6 +45,7 @@ section>article {
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
+    text-align: center;
     margin: 3%;
     padding: 4%;
     border-radius: 5%;
