Implementación noticias por texto
Se ha implementado la creación de noticias por medio de texto, funcionalidad que permite especificar título, contenido y autor de la noticia y a partir de esto crea una noticia nueva

--- a/estilo/article_elements.css
+++ b/estilo/article_elements.css
@@ -6,6 +6,13 @@ main > section {
 }
 
 /* Especificidad 003 */
+main > section:first-of-type > section {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 1%;
+}
+
+/* Especificidad 003 */
 main > section > h2 {
     grid-column: 1 / -1;
     display: flex;
@@ -13,8 +20,18 @@ main > section > h2 {
     text-decoration-line: underline;
 }
 
+/* Especificidad 002 */
+section > textarea, section > label {
+    margin: 0% 2%;
+}
+
+/* Especificidad 003 */
+section > button {
+    margin: 1% 5%;
+}
+
 /* Especificidad 001 */
-article {
+section > article {
     display: grid;
     max-height: 20em;
     grid-template-rows: 1fr 1fr 1fr 1fr;
