Fix Estilo Meteorología y Noticias
Se ha cambiado el estilo de los recuadros que contenian la información meteorológica y las noticias pues, en caso de introducir noticias muy largas, el texto sufría desborde

--- a/estilo/article_elements.css
+++ b/estilo/article_elements.css
@@ -33,8 +33,7 @@ section > button {
 /* Especificidad 001 */
 section > article {
     display: grid;
-    max-height: 20em;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     grid-template-columns: 1fr;
     margin: 1% 2%;
     border-radius: 5%;
