Bug Fixed Mal Selector
Se habia utilizado un selector que modificaba además de los mapas, la primera luz del juego del semáforo

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -183,7 +183,7 @@
 
  /* ----- Estilo para Bloque div de mapas ----- */
 
- main>div:first-of-type {
+ main>div:last-child {
      height: 70vh;
      width: 100%;
  }
