Implementación mostrar info circuitoEsquema.xml
Se ha implementado en Circuito.html un archivo JavaScript que permite mostrar la información del archivo circuitoEsquema.xml introducido

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -151,6 +151,12 @@
 
  /* ----- Multimedia ----- */
 
+ /* Especificidad 001 */
+ img {
+    max-width: 80%;
+    height: auto;
+ }
+
  @media only screen and (max-width: 900px) {
 
      /* Especificidad 001 */
